--- a/LudumeDare48/Config/DefaultEngine.ini
+++ b/LudumeDare48/Config/DefaultEngine.ini
@@ -17,3 +17,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [URL]
 GameName=LudumeDare48
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
