--- a/LudumeDare48/Config/DefaultInput.ini
+++ b/LudumeDare48/Config/DefaultInput.ini
@@ -78,12 +78,15 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MoveHold",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
-+ActionMappings=(ActionName="MoveShift",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
-+AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
++ActionMappings=(ActionName="MoveBoost",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
++ActionMappings=(ActionName="PushRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
++ActionMappings=(ActionName="PushLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=D)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=A)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
++ConsoleKeys=ё
 
