lighting & bugs fix

--- a/LudumeDare48/Config/DefaultEngine.ini
+++ b/LudumeDare48/Config/DefaultEngine.ini
@@ -19,6 +19,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 GameName=LudumeDare48
 
 [/Script/Engine.RendererSettings]
-r.DefaultFeature.AutoExposure=True
+r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
 
