--- a/LudumeDare48/Config/DefaultInput.ini
+++ b/LudumeDare48/Config/DefaultInput.ini
@@ -81,7 +81,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MoveBoost",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
 +ActionMappings=(ActionName="PushRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
 +ActionMappings=(ActionName="PushLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
-+ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +AxisMappings=(AxisName="MoveRight",Scale=-0.500000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=0.500000,Key=A)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
