--- a/LudumeDare48/Config/DefaultGame.ini
+++ b/LudumeDare48/Config/DefaultGame.ini
@@ -44,8 +44,8 @@ InternationalizationPreset=English
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
 bCookMapsOnly=False
-bCompressed=True
-bSkipEditorContent=True
+bCompressed=False
+bSkipEditorContent=False
 bSkipMovies=False
 -IniKeyBlacklist=KeyStorePassword
 -IniKeyBlacklist=KeyPassword
